--- a/MapEditor/MapEditor.csproj
+++ b/MapEditor/MapEditor.csproj
@@ -93,7 +93,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\NoxShared.csproj">
@@ -250,6 +250,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="render\BitmapShader.cs" />
+    <Compile Include="render\CustomRenderObject.cs" />
+    <Compile Include="render\FakeWallObject.cs" />
     <Compile Include="render\MapViewRenderer.cs" />
     <Compile Include="render\MinimapRenderer.cs" />
     <Compile Include="render\ObjectRenderer.cs" />
