--- a/MapEditor/app.config
+++ b/MapEditor/app.config
@@ -7,78 +7,81 @@
 	</configSections>
 	<userSettings>
 		<MapEditor.EditorSettings>
-			<setting name="Draw_AllExtents" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Draw_AllText" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_ComplexPreview" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_Extents" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Draw_Extents_3D" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Draw_FloorTiles" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_Grid" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_ObjCustomLabels" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_ObjectFacing" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_Objects" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_ObjTeams" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_ObjThingNames" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Draw_Polygons" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_PreviewTexEdges" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_Walls" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Draw_Waypoints" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Edit_AllowOverride" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Edit_PreviewMode" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Edit_SnapGrid" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Edit_SnapHalfGrid" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Save_EnableScripts" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Save_ExportNXZ" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="Save_ProtectMap" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="Script_CodeFont" serializeAs="String">
-				<value>DejaVu Sans, 9.75pt</value>
-			</setting>
-		</MapEditor.EditorSettings>
+   <setting name="Draw_AllExtents" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_AllText" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_ComplexPreview" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Draw_Extents" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_Extents_3D" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_FloorTiles" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Draw_Grid" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_ObjCustomLabels" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_ObjectFacing" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_Objects" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Draw_ObjTeams" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_ObjThingNames" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_Polygons" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Draw_PreviewTexEdges" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Draw_Walls" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Draw_Waypoints" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Edit_AllowOverride" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Edit_PreviewMode" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Edit_SnapGrid" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Edit_SnapHalfGrid" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Edit_SnapCustom" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Save_EnableScripts" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Save_ExportNXZ" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="Save_ProtectMap" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="Script_CodeFont" serializeAs="String">
+    <value>DejaVu Sans, 9.75pt</value>
+   </setting>
+  </MapEditor.EditorSettings>
 	</userSettings>
 <startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
